Bug 1427700 - Don't return valid HandlerApp for the application/octet-stream content type; r=stransky

When server set Content-type:application/octet-stream to the file there is a chance on some Linux
distros that "unknown" file handler is selected to open the file which leads to strange list
of application handlers.

The logic leads to nsOSHelperAppService::GetFromType where the nsGNOMERegistry::GetFromType
is called which could return useless "unknown" handler app.

MozReview-Commit-ID: 5RgviXEBUmj